# kb

./: .gitignore  CONTRIBUTING.md  README.md  package.json  pyproject.toml  tsconfig.base.json
.github/workflows/: ci.yml  triage.yml
collectors/: git_activity.py
contract/: README.md
fixtures/: README.md  action-items.md  github-repos.json  names.json  product-labels.json  projects.json
fixtures/decisions/: archive.md  cross-cutting.md
fixtures/journal/: 2026-07-13.md
fixtures/people/: andrew-thal.md  stephen-golub.md
fixtures/projects/: firewall.md  lumen-sentinel.md
openspec/specs/domain-model/: spec.md
skill/kb/: SKILL.md
src/kb/: __init__.py  __main__.py  config.py  plugin_config.py  plugin_loader.py  plugins.py
tests/integration/: test_fuzzy_matches.py  test_index.py
tests/ui/: dashboard_factory.py  test_command_bar.py  test_dashboard.py  test_help_and_bindings.py  test_people_search.py  test_scroll_bindings.py
tests/unit/: test_actionitems.py  test_aliases.py  test_cli.py  test_config.py  test_contract_boundary.py  test_contract_collector.py  test_contract_envelope.py  test_contract_errors.py  test_contract_public_api.py  test_contract_schema.py  test_contract_schema_pack.py  test_contract_translate.py  test_core_boundary.py  test_core_plugin.py  test_engine_query_and_writes.py  test_eventkit_services.py  test_frontmatter.py  test_git_activity.py  test_main.py  test_markdown.py  test_parse.py  test_platform_boundary.py  test_platform_fakes.py  test_plugin_config.py  test_plugin_loader.py  test_plugins.py  test_ui_boundary.py
(+57 files in other folders)
